--- a/nade/Cargo.toml
+++ b/nade/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nade"
 description = "Adding named and default arguments to Rust functions"
-keywords = ["macro", "named arguments", "default arguments"]
+keywords = ["macro", "named", "default arguments"]
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
