--- a/nade/Cargo.toml
+++ b/nade/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 homepage.workspace = true
 repository.workspace = true
 include.workspace = true
+readme = "../README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
