--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["nade", "nade-macro"]
+members = [".", "nade-macro"]
 
 [workspace.package]
 version = "0.2.0"
@@ -19,3 +19,24 @@ quote = { version = "1", default-features = false }
 syn = { version = "1", default-features = false }
 trybuild = { version = "1", default-features = false }
 macro-v = { version = "0.1.3", default-features = false }
+
+[package]
+name = "nade"
+description = "Adding named and default arguments to Rust functions"
+keywords = ["macro", "named", "default"]
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+include.workspace = true
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+macro-v = { workspace = true }
+nade-macro = { workspace = true }
+
+[dev-dependencies]
+trybuild = { workspace = true }
