doc: Update README.MD.
chore: Remove unnecessary internal struct.

fix: Improved error message when a parameter is specified multiple times by named.

fix: Improved error message when `#[nade(..)]` is used multiple times on a single parameter.

chore: Rename internal function name.

chore: Simplified implementation of `Parse` trait for `Parameter` struct.

--- a/nade-macro/Cargo.toml
+++ b/nade-macro/Cargo.toml
@@ -19,11 +19,4 @@ proc-macro = true
 prettyplease = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
-syn = { workspace = true, features = [
-    "clone-impls",
-    "extra-traits",
-    "parsing",
-    "proc-macro",
-    "printing",
-    "full",
-] }
+syn = { workspace = true, features = ["clone-impls", "extra-traits"] }
