--- a/nade-macro/Cargo.toml
+++ b/nade-macro/Cargo.toml
@@ -19,4 +19,10 @@ proc-macro = true
 prettyplease = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
-syn = { workspace = true, features = ["clone-impls", "extra-traits"] }
+syn = { workspace = true, features = [
+    "clone-impls",
+    "extra-traits",
+    "parsing",
+    "proc-macro",
+    "printing",
+] }
